# hal

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  deployment.html  dir_000004_000001.html  dir_000005_000001.html  dir_000005_000008.html  dir_000007_000002.html  dir_000007_000006.html  dir_000007_000008.html  dir_000008_000002.html  dir_000008_000007.html  dir_000009_000001.html  dir_000009_000008.html  dir_000010_000001.html  dir_000010_000002.html  dir_000011_000001.html  dir_000011_000002.html  dir_000011_000009.html  dir_000012_000001.html  dir_000014_000002.html  dir_000015_000002.html  dir_000015_000008.html  dir_000015_000009.html  dir_000015_000014.html  dir_000016_000002.html  dir_000016_000009.html  dir_19ba1bda21790f29beaa012230e0300d.html  dir_19ba1bda21790f29beaa012230e0300d.js  dir_19ba1bda21790f29beaa012230e0300d_dep.map  dir_19ba1bda21790f29beaa012230e0300d_dep.md5  dir_1ec77ebc6115d7c54a0bc25cdced601a.html  dir_1ec77ebc6115d7c54a0bc25cdced601a.js  (+233 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  tag.yml
cmake/: CppCheck.cmake  Version.cmake
cmake/module/: AddCoverage.cmake  ClangTidy.cmake  Doxygen.cmake  Util.cmake  Version.cmake
cmake/template/: HalConfig.cmake.in
cmake/toolchain/: CMakeToolChain.stm32f446.cmake
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/gpio/: index-sort-f.html  index-sort-l.html  index.html  stm32f4_gpio.c.func-sort-c.html  stm32f4_gpio.c.func.html  stm32f4_gpio.c.gcov.html
coverage/i2c/src/: i2c_transaction_queue.c.func-sort-c.html  i2c_transaction_queue.c.func.html  i2c_transaction_queue.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  stm32f4_i2c.c.func-sort-c.html  stm32f4_i2c.c.func.html  stm32f4_i2c.c.gcov.html
coverage/pwm/src/: index-sort-f.html  index-sort-l.html  index.html  stm32f4_pwm.c.func-sort-c.html  stm32f4_pwm.c.func.html  stm32f4_pwm.c.gcov.html
coverage/systick/: index-sort-f.html  index-sort-l.html  index.html  stm32f4_systick.c.func-sort-c.html  stm32f4_systick.c.func.html  stm32f4_systick.c.gcov.html
coverage/uart/src/: index-sort-f.html  index-sort-l.html  index.html  stm32f4_uart.c.func-sort-c.html  stm32f4_uart.c.func.html  stm32f4_uart.c.gcov.html  stm32f4_uart1.c.func-sort-c.html  stm32f4_uart1.c.func.html  stm32f4_uart1.c.gcov.html  stm32f4_uart2.c.func-sort-c.html  stm32f4_uart2.c.func.html  stm32f4_uart2.c.gcov.html  stm32f4_uart_util.c.func-sort-c.html  stm32f4_uart_util.c.func.html  stm32f4_uart_util.c.gcov.html
device/: CMakeLists.txt
device/include/stm32f4/: stm32f4xx.h
docs/: Doxyfile.in  architecture.md  index.md  license.md  mainpage.md
docs/pages/: deployment.md  license.md  pinout.md  project_integration.md  waveforms.md
hal_interface/: CMakeLists.txt
hal_interface/include/: hal_types.h  i2c.h  pwm.h  uart.h
include/: CMakeLists.txt  hal_version.h.in
include/hal/: gpio.h  hal_metadata.h  hal_system.h  hal_types.h  i2c.h  pwm.h  systick.h  uart.h
playground/: main.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  (+25 more)
simulations/: CMakeLists.txt
simulations/stm32f446re/: CMakeLists.txt
simulations/stm32f446re/stm32f4_mocks/: CMakeLists.txt
simulations/stm32f446re/stm32f4_mocks/include/: nvic.h  registers.h
simulations/stm32f446re/stm32f4_mocks/src/: nvic.c  registers.c
simulations/stm32f446re/test/: i2c_driver_test.cpp  i2c_state_machine_test.cpp  i2c_transaction_queue_test.cpp  pwm_driver_test.cpp  uart1_driver_test.cpp  uart2_driver_test.cpp  uart_driver_test.cpp
src/: CMakeLists.txt  main.c
src/drivers/: CMakeLists.txt
src/drivers/include/: adc.h  gpio.h  systick.h  uart.h
src/drivers/src/: adc.c  gpio.c  systick.c  uart.c
src/gpio/: stm32f4_gpio.c
src/i2c/include/: i2c_transaction_queue.h
src/i2c/src/: i2c_transaction_queue.c  stm32f4_i2c.c
src/include/: stm32f4_hal.h
src/metadata/src/: hal_metadata.c
src/pwm/src/: stm32f4_pwm.c
src/system/: stm32f4_hal_system.c
src/systick/: stm32f4_systick.c
src/uart/include/: stm32f4_uart1.h  stm32f4_uart2.h  stm32f4_uart_util.h
src/uart/src/: stm32f4_uart.c  stm32f4_uart1.c  stm32f4_uart2.c  stm32f4_uart_util.c
stm32f446re/: CMakeLists.txt
test/: main.c
tests/: uart_test.py
tests/integration/: main.c
tests/mocks/: CMakeLists.txt
tests/mocks/src/: nvic.c  registers.c
tests/unit/: CMakeLists.txt  gpio_driver_test.cpp  i2c_driver_test.cpp  i2c_transaction_queue_test.cpp  pwm_driver_test.cpp  systick_driver_test.cpp  uart1_driver_test.cpp  uart2_driver_test.cpp  uart_driver_test.cpp
